2019-05-29 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Improve arithmetic right shift.
	* src/hc08/gen.c:
	  Minor improvements suggested by Tony Papadimitriou.

2019-05-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c,
	  src/SDCCopt.c: fix some def/use bugs
	* support/regression/tests/gcc-tortue-execute-stdarg-5.c:
	  disable test for stm8, unimplemented addition op
	* src/mcs51/ralloc.c,
	  src/ds390/ralloc.c,
	  src/hc08/ralloc.c,
	  src/z80/ralloc.c,
	  src/pdk/ralloc.c,
	  src/pic14/ralloc.c,
	  src/pic16/ralloc.c: fix a live range bug

2019-05-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* device/include/string.h,
	  device/lib/incl.mk,
	  device/lib/memccpy.c,
	  support/regression/tests/memory.c:
	  Implement C2X memccpy().

2019-04-27 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/ralloc.c,
	  src/pdk/gen.c:
	  Improve register packing.

2019-04-27 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  src/pdk/peeph.def:
	  Improve workaround for missing addc/subc a, k; improve shifts by 7, 15, etc; fix handling of non-dead a in wide right shifty by literal.

2019-04-24 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Fix note on endianness.

2019-04-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Fix bug #2904.
	* src/z80/gen.c:
	  Implement RFE #623.

2019-04-18 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/pdk.src/inst.cc:
	  Fix addc m, a, patch by Nicolas Lesser,
	  fix subs m, a.
	* src/pdk/gen.c:
	  +=, -= optimization; fix wide == between stack and register operand.

2019-04-17 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/pdk.src/pdk.cc:
	  Fix register dump, patch by Nicolas Lesser.

2019-04-17 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Various fixes and improvements.
	* src/SDCCpeeph.c,
	  src/pdk/peeph.def: