@@ -16,7 +16,6 @@
 long x, y;
 
 #if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // Bug #2874
-#if !defined(__SDCC_stm8)
 
 #define INLINED_{inlined}
 
@@ -132,7 +131,6 @@ f4 (int i, ...)
   va_end (ap);
 }
 #endif
-#endif
 
 void
 testTortureExecute (void)
@@ -141,8 +139,6 @@ testTortureExecute (void)
 #if defined(__SDCC_pic16)
   //broken, skip
 #elif defined(__SDCC_mcs51) && defined(__SDCC_STACK_AUTO) && !defined(__SDCC_USE_XSTACK) && defined(INLINED_yes)
-  //broken, skip
-#elif defined(__SDCC_stm8)
   //broken, skip
 #else
   f1 (3, 16.0, 128L, 32.0);
